--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Doses#new</h1>
-<p>Find me in app/views/doses/new.html.erb</p>
+<h1>Add dose</h1>
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+  <%= f.error_notification %>
+  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  <div class="form-inputs">
+    <%= f.input :description %>
+    <%= f.select :ingredient_id, Ingredient.all.pluck(:name, :id)%>
+  </div>
+  <br>
+  <br>
+  <div class="form-actions">
+    <%= f.button :submit, class: 'btn btn-primary'%>
+    <%= link_to "Back to doses", cocktail_path(@cocktail.id), class: 'btn btn-primary' %>
+  </div>
+
+
+<% end %>
